<resources>
    <string name="app_name">SmartHome</string>
    <string name="action_settings">Settings</string>
    <string name="title">Security</string>
    <string name="btn_label1"> Door Status </string>
    <string name="btn_label2"> Switch Control </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="wheel">Steering Wheel</string>
    <string name="ground">The Ground</string>
    <string name="window">Window Frame</string>
    <string name="sun">The Sun</string>
    <string name="cloud">A Cloud</string>

    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="Checkbox">Save detail For Nexttime</string>
    <string name="buttonLogin">Login</string>
    <string name="request_accessButton">Request Access</string>
    <string name="user_name_hint">User name</string>
    <string name="user_name_rule">User name must have at least 4 caharacter</string>
    <string name="password_hint">Password</string>
    <string name="PasswordRule">Password must have at least 8 caharacter</string>
    <string name="ConfirmPasswordHint">ConfirmPassword</string>
    <string name="emailhint">Email</string>
    <string name="send_requestButton">Send Request</string>
    <string name="cancelButton">Cancel</string>
    <string name="title_activity_notification_receiver">NotificationReceiverActivity</string>
    <string name="AutLogin">AutoLogin</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="Multiline_Text_By_N">
        Line number 1 \nLine number 2
    </string>
</resources>
