<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.smarthome.ui.activity.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/user_name"
        android:ems="10"
        android:id="@+id/UserNameID" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordID" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="One Time Passcode"
        android:ems="10"
        android:visibility="invisible"
        android:id="@+id/PasscodeID" />


    <CheckBox
        android:text="@string/AutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AutoLoginID" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LoginID"
            android:layout_weight="1.43" />

        <Button
            android:text="@string/request_accessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RequestID"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>